--- a/src/citas-pacientes.html
+++ b/src/citas-pacientes.html
@@ -184,6 +184,8 @@
                   <th scope="col">Nombre</th>
                   <th scope="col">Fecha</th>
                   <th scope="col">Hora</th>
+                  <th scope="col">Doctor</th>
+                  <th scope="col">Valor</th>
                 </tr>
               </thead>
               <tbody></tbody>
