--- a/src/citas-pacientes.html
+++ b/src/citas-pacientes.html
@@ -149,6 +149,8 @@
 
         <div class="row">
           <div class="col-md-12 text-end">
+            <button class="btn btn-primary" id="total-dr-button">Total de Horas por Dr</button>
+            <button class="btn btn-primary" id="average-button">Tiempo promedio</button>
             <button class="btn btn-primary" id="pending-button">Agendar paciente</button>
           </div>
         </div>
@@ -186,6 +188,8 @@
                   <th scope="col">Hora</th>
                   <th scope="col">Doctor</th>
                   <th scope="col">Valor</th>
+                  <th scope="col">Tiempo de espera</th>
+                  <th scope="col">Descuento</th>
                 </tr>
               </thead>
               <tbody></tbody>
