--- a/src/contacto.html
+++ b/src/contacto.html
@@ -108,7 +108,7 @@
       <div class="container mt-5">
         <div class="row">
           <div class="col-md-8 offset-md-2">
-            <form>
+            <form id="contact">
               <div class="mb-3">
                 <label for="nombre" class="form-label">Nombre</label>
                 <input type="text" class="form-control" id="nombre" />
