add alert on new patient

--- a/src/citas-pacientes.html
+++ b/src/citas-pacientes.html
@@ -8,6 +8,9 @@
 </head>
 
 <body>
+  <div class="position-fixed top-0 end-0" style="z-index: 10;" id="new-patient-alert">
+  </div>
+
   <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
