--- a/src/citas-pacientes.html
+++ b/src/citas-pacientes.html
@@ -152,6 +152,7 @@
 
         <div class="row">
           <div class="col-md-12 text-end">
+            <button class="btn btn-primary" id="total-patient-button">Costo total por Paciente</button>
             <button class="btn btn-primary" id="total-dr-button">Total de Horas por Dr</button>
             <button class="btn btn-primary" id="average-button">Tiempo promedio</button>
             <button class="btn btn-primary" id="pending-button">Agendar paciente</button>
